--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   get:
   http:
+  flutter_overboard: ^2.0.1
+  get_storage: ^2.0.3
 
 dev_dependencies:
   flutter_test:
@@ -40,7 +42,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
